Prevent Satellite menu title to overlap with background.

--- a/Zsebi2/wwwroot/css/style.css
+++ b/Zsebi2/wwwroot/css/style.css
@@ -248,6 +248,10 @@ figcaption {
         width: 100%;
     }
 
+.satArticle header {
+    margin-left: 2rem;
+    margin-right: 0.5rem;
+}
 
 section.technicalSection {
     background: none;
